# dspy-examples

./: .gitignore  README.md
dspy-fact-checker/: README.md  fact_check_rag.py  pyproject.toml
dspy-gepa-agent-communication/: README.md  agent_communication.py  demo_assertions.py  requirements.txt
dspy-gepa-deidentification/: README.md  minimal_gepa_deid.py  pyproject.toml
dspy-gepa-interagent-comms/: main.py  pyproject.toml
dspy-gepa-researcher/: README.md  dspy_researcher.py  pyproject.toml  report.md
dspy-gepa-sql-generator/: README.md  nl2sql_gepa.py  pyproject.toml
dspy-researcher/: README.md  pyproject.toml
